--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/reset.css" type="text/css">
   <link rel="stylesheet" href="./css/About.css" type="text/css">
-  <title>Vacay Travel Planner</title>
+  <title>Team Vacay</title>
 </head>
 <body>
   <header>
