--- a/cabo-san-lucas.html
+++ b/cabo-san-lucas.html
@@ -3,35 +3,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" alt="meyers-reset">
-  <link rel="stylesheet" href="/css/destinations.css" alt="">
-  <title>Travel Fever</title>
+  <link rel="stylesheet" href="./css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./css/Destinations.css" type="text/css">
+  <title>Cabo San Lucas</title>
 </head>
-<body>
-  <a href="" id="Cabo San Lucas" class="save-destination">Save This Destination</a>
 
+<!-- Container and body margins make snow or sun page border -->
+<body class = "sun">
+  <div class = "container">
   <header>
+    <a href="./index.html">Back to Home</a>
+    <a href="./saved.html">Saved Destinations</a>
+
     <nav>
-      <h1>Vacay Travel Planner</h1>
-      <h2>Destination-3</h2>
-      <ul>
-        <li><a href="../html/index.html">Landing Page</a></li>
-        <li><a href="../html/saved.html">Saved Destinations</a></li>
-        <br>
-        <li><a href="../html/dest1.html">Destination-1</a></li>
-        <li><a href="../html/dest2.html">Destination-2</a></li>
-        <li><a href="../html/dest3.html">Destination-3</a></li>
-        <li><a href="../html/dest4.html">Destination-4</a></li>
-        <li><a href="../html/dest5.html">Destination-5</a></li>
-        <li><a href="../html/dest6.html">Destination-6</a></li>
-        <li><a href="../html/dest7.html">Destination-7</a></li>
-        <li><a href="../html/dest8.html">Destination-8</a></li>
-        <br>
-        <li><a href="../html/about.html">About Us</a></li>
-      </ul>
+      <form>
+        <select id="dest" name="dest" onchange="dropDownSelection()">
+              <option value="">Browse Destinations</option>
+              <option value="Stowe">Stowe, Vermont</option>
+              <option value="Telluride">Telluride, Colorado</option>
+              <option value="Tramso">Tramsø, Norway</option>
+              <option value="Zermatt">Zermatt, Switzerland</option>
+              <option value="">-----------</option>
+              <option value="Cabo-San-Lucas">Cabo San Lucas, Mexico</option>
+              <option value="Granada">Granada, Spain</option>
+              <option value="Los-Angeles">Los Angeles, California</option>
+              <option value="Phuket">Phuket, Thailand</option>
+          </select>
+      </form>
+      <!-- <form>
+        <label>Browse By Category</label>
+          <select id="dest" name="dest">
+              <option value="Snow">Snow</option>
+              <option value="Sun">Sun</option>
+          </select>
+      </form> STRETCH GOAL!!!  -->
     </nav>
   </header>
-  <script src="../js/app.js" alt="" ></script>
+  <main>
+    <section id = "hero">
+      <h1 >Cabo San Lucas</h1>
+      <img src="./img/cabo-san-lucas.jpg" class = "center">
+    </section >
+      <article id = "scroll">
+        <h3>Visit the pristine blue waters of The Sea of Cortez and the Mexican Riviera</h3>
+        <br><br>
+         <p> Cabo San Lucas, a resort city on the southern tip of Mexico’s Baja California peninsula, is 
+           known for its beaches, water-based activities and nightlife. Playa El Médano is Cabo’s main beach, 
+           with outdoor restaurants and numerous bars.
+          <br><br>
+          A longtime favorite for sport fishing and those out to land the big one, Cabo also has great beaches, 
+          lots of shopping and restaurants, and a variety of all-inclusive hotels and resorts for any budget, 
+          also known for its famous stone arch, called El Arco, a magnificent natural rock formation at Land's End.
+          <br><br>
+          Visit Medano Beach, the city's long main beach, great for swimming and watersports, with lots of 
+          fun restaurants by the edge, drink your Margarita or Tequila with the sand under your feet and enjoy 
+          the picture-perfect views.
+          <br><br>
+          A popular port of call for cruise ships along the Mexican Riviera, Cabo is also a popular destination 
+          for Spring Breakers and a popular hideaway for the rich and famous.
+        </p>
+      </article>
+      <a href="" id="Cabo San Lucas" class="save-destination">Save This Destination</a>
+    <section id = "info-links">
+      <section id = "temps">
+        <h2>Avg Temps &#8457</h2>
+        <ul id = "temps-list"> 
+          <li>Winter</li>
+          <li>Spring</li>
+          <li>Summer</li>
+          <li>Fall</li>
+          <li> Hi 81 -- Low 62</li>
+          <li> Hi 90 -- Low 67</li>
+          <li> Hi 94 -- Low 80</li>
+          <li> Hi 92 -- Low 74</li>
+
+        </ul>
+      </section>
+      <section id = "events">
+        <ul> 
+          <h2>Annual Events</h2>
+          <li><a href = "https://www.visitloscabos.travel/event/los-cabos-open-of-surf/18/">
+            Cabo Surf Contest</a></li>
+          <li><a href = "https://www.visitloscabos.travel/event/bisbee%c2%b4s-offshore-fishing-tournament/20/">
+            Off-Shore Fishing</a></li>
+          <li><a href = "https://www.visitloscabos.travel/event/sabor-a-cabo-2020/23/">Sabor a Cabo</a></li>
+          <li><a href = "https://www.visitloscabos.travel/event/day-of-the-death-festival-secrets-of-la-catrina/4/">Day of the Dead Festival</a></li>
+          <li><a href = "https://www.visitloscabos.travel/event/san-jose-del-cabo-gallery-district/16/">Gallery District Art Walk</a></li>
+          <li><br></li>
+        </ul>
+      </section>
+      <section id = "links">
+        <ul> 
+          <h2>Links</h2>
+          <li><a href = "https://www.cabosanlucas.net/en/">Discover Cabo San Lucas</a></li>
+          <li><a href = "https://www.visitloscabos.travel/">Visit Los Cabos</a></li>
+          <li><a href = "https://travel.usnews.com/Cabo_San_Lucas_Mexico/Things_To_Do/">Things to Do in Cabo San Lucas</a></li>
+          <li><br></li>
+        </ul>
+      </section>
+    </section>
+  </main>
+  <script src="./js/app.js"></script>
+  <script src="./js/storage.js"></script>
+  <footer>
+    <a href="./about.html">Meet The Team</a>
+    <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
+    <img src="./img/small-sun-icon.png" class = "icon">
+  </footer>
+  
+  <!-- Container and body margins make snow or sun page border -->
+</div>
 </body>
-<footer>&copy;Vacay Travel Planner 2020 </footer>
 </html>
