blue border changed on snow pages via Destinations.css

--- a/stowe.html
+++ b/stowe.html
@@ -45,7 +45,7 @@
       <img src="./img/stowe.jpg" class = "center">
     </section >
       <article id = "scroll">
-        <h3>Experience The Green Mountains</h3>
+        <h3>Experience Skiing in The Green Mountains</h3>
          <p> <br><br>Stowe is a town in Lamoille County, Vermont, United States. The population
            was 4,314 at the 2010 census. The town lies on Vermont Route 108, locally known as 
            the Mountain Road. It is nicknamed 'The Ski Capital of the East' and is home to Stowe 
