--- a/zermatt.html
+++ b/zermatt.html
@@ -111,7 +111,7 @@
   <footer>
     <a href="./about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
-    <img src="./img/small-sun-icon.png" class = "icon">
+    <img src="./img/small-snow-icon.png" class = "icon">
   </footer>
   
   <!-- Container and body margins make snow or sun page border -->
