LA carousel demo x4 images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Vacay Travel Planner</title>
 </head>
 <body>
+
+<!-- Testing link for carousel -->
+<a href="./carousel.html">Launch Carousel</a>
+
+
   <header>
     <a href="./saved.html">Saved Destinations</a>
     
