add forms for saving dest

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
-  <figcaption> Ashley Casimir <br> GH: @ashcaz</figcaption>
+  <figcaption> Ashley Casimir <br></figcaption>
     <section class = "pitch">
       <h3>I Am Ashley -- I'm First Because of the "A" -- I'm Learning Python, Too</h3>
       <br>  
@@ -30,7 +30,7 @@
 
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
-  <figcaption> Chris Bortel <br> GH: @Chris-Bortel</figcaption>
+  <figcaption> Chris Bortel <br></figcaption>
     <section class = "pitch">
       <h3>I Am Chris -- I Have a Wife -- I Have a Dog -- I Bike and Stuff</h3>
       <br>  
@@ -43,7 +43,7 @@
 
   <section class = "member">
   <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
-  <figcaption> Henry Funk <br> GH: @ghenryfunk</figcaption>
+  <figcaption> Henry Funk <br></figcaption>
     <section class = "pitch">
       <h3>I Am Henry -- I Am Awesome -- I like Outdoors Stuff -- And Stuff</h3>
       <br>  
@@ -63,7 +63,7 @@
 
   <section class = "member">
   <figure class = "thumbnail"><img src="./img/beer and pizza.png"></figure>
-  <figcaption> Kim Damalas <br> GH: @kimmyd70</figcaption>
+  <figcaption> Kim Damalas <br></figcaption>
   
     <section class = "pitch">
       <h3>Semi-Retired -- Math Nerd -- Scotch Enthusiast -- Coding Newbie</h3>
