--- a/los-angeles.html
+++ b/los-angeles.html
@@ -21,7 +21,7 @@
               <option value="">Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
-              <option value="Tramso">Tramsø, Norway</option>
+              <option value="Tramso">Tromsø, Norway</option>
               <option value="Zermatt">Zermatt, Switzerland</option>
               <option value="">-----------</option>
               <option value="Cabo-San-Lucas">Cabo San Lucas, Mexico</option>
@@ -62,7 +62,13 @@
           <br><br>And yes, if you really need to, you can visit Hollywood too!
         </p>
       </article>
-      <a href="" id="Los Angeles" class="save-destination">Save This Destination</a>
+
+      <form >
+        <input id = "input-username" type = "text" placeholder = "Enter Username" required>
+        <input type = "submit" id="Los Angeles" class="save-destination" value = "Save This Destination">
+        <p id = "duplicate-dest"></p>
+      </form>
+
     <section id = "info-links">
       <section id = "temps">
         <h2>Avg Temps &#8457</h2>
