--- a/zermatt.html
+++ b/zermatt.html
@@ -21,7 +21,7 @@
               <option value="">Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
-              <option value="Tramso">Tramsø, Norway</option>
+              <option value="Tramso">Tromsø, Norway</option>
               <option value="Zermatt">Zermatt, Switzerland</option>
               <option value="">-----------</option>
               <option value="Cabo-San-Lucas">Cabo San Lucas, Mexico</option>
@@ -68,7 +68,12 @@
           here by train and once here, you will get around by walking or taking the e-Bus or an e-Taxi.
         </p>
       </article>
-      <a href="" id="Zermatt" class="save-destination">Save This Destination</a>
+      <form >
+        <input id = "input-username" type = "text" placeholder = "Enter Username" required>
+        <input type = "submit" id="Zermatt" class="save-destination" value = "Save This Destination">
+        <p id = "duplicate-dest"></p>
+      </form>
+
     <section id = "info-links">
       <section id = "temps">
         <h2>Avg Temps &#8457</h2>
