--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <option value="reset" disabled selected>Browse Destinations</option>
               <option value="Stowe">Stowe, Vermont</option>
               <option value="Telluride">Telluride, Colorado</option>
-              <option value="Tramso">Tramsø, Norway</option>
+              <option value="Tramso">Tromsø, Norway</option>
               <option value="Zermatt">Zermatt, Switzerland</option>
               <option value="">-----------</option>
               <option value="Cabo-San-Lucas">Cabo San Lucas, Mexico</option>
