--- a/phuket.html
+++ b/phuket.html
@@ -45,21 +45,43 @@
       <img src="./img/los-angeles-sunset-small.jpg" class = "center">
     </section >
       <article id = "scroll">
-        <h3>Need some fun in the sun? Then take a trip to the stars and visit Los Angeles, California!</h3>
-         <p> <br><br>But don’t just go straight to Hollywood. The sprawl of this city can be intimidating. Visitors 
-          are often overwhelmed and stuck seeing nothing but the fake movie sets barely covering the growing 
-          homelessness crisis.
-          <br><br>Dive deeper to visit the artistic epicenter that made Los Angeles what it is today. From the beaches 
-          on the Westside near Santa Monica to the hippest coffee shops in town on the east-side, discover 
-          the magic that lies within each unique neighborhood.
-          <br><br>Silver Lake, Echo Park, and Los Feliz make up a cultural tri-fecta on the eastside of the city. With 
-          dozens of boutique music venues drawing major acts into intimate settings, or discovering the next 
-          big thing, there’s always something to do in this favorite haunt for the creative spirit in LA.
-          <br><br>Visit Pasadena in the foothills of the San Gabriel mountains to catch a game at the famous Rose-Bowl 
-          stadium. Better yet, head over to Lucky Boy for their world famous breakfast burrito!
-          <br><br>Take a hike through the Griffith Observatory and catch sunset from one of the best views at the top. 
-          Your friends will never believe there was so much greenery to be found in Los Angeles.
-          <br><br>And yes, if you really need to, you can visit Hollywood too!
+        <h3>Paradise in Phuket Thailand</h3>
+         <p> <br><br>Backpacking in Phuket Thailand--Phuket is the biggest island in the country and 
+          contains a wide range of beaches 
+          and environments to see. This being the case, south of the island is a little over-developed 
+          and crowded with tourists. The north part of the island however, is a paradise where you can 
+          find peace and memorable experiences. 
+
+          <br><br>Khao Phra Thaeo Wildlife Park--Take a trip to the Khao Phra Thaeo Conservation Development 
+          and Extension Center, a 
+          center focused on preserving the environment. The center contains a park which is home to a 
+          number of endangered animals, and also contains giant trees in the midst of a dense forest. 
+          Make sure to check out the Nam Tok Sai waterfall, which is located close to the park headquarters. 
+          There is also a floating restaurant located in the mangroves! Admission is 200 THB ($6.25 USD)
+
+          <br><br>Beautiful Vistas--Phuket has many viewpoints — there are 10 in total. Promthep tends to
+           be the most popular, 
+          but another great spot is the Kata viewpoint. Nothing is better than watching a golden sunset 
+          from these points. Your camera will thank you!
+
+          <br><br>Rent a Motorbike--This is the best way to get out and explore the island on your own. 
+          Find your way to 
+          Laem Singh Beach, a more secluded and laid-back spot with some great snorkeling opportunities. 
+          Be careful — biking in Phuket can be a little dangerous. You can expect to pay about 200 THB 
+          ($6.25 USD) a day for a bike.
+
+          <br><br>Explore Sirinat National Park--This national park was founded in the early ’80s and 
+          consists of three beach areas along the northwest coast of Phuket. It includes a couple of beaches, 
+          including Nai Yang, Sai Kaew, and Mai Khao, as well as the mangrove forest where the saltwater and 
+          freshwater mix. This is a good place for camping. During the spring, endangered Leatherback Turtles 
+          come here to lay their eggs. Park entrance costs 200 THB ($6.25 USD).
+
+          <br><br>Snorkel the waters--Phuket has over 33 beaches, all of them pretty incredible. While not 
+          all of them are great for snorkeling, some of the best are Laem Singh Beach, Ao Sane, Ya Nui, and 
+          Surin. You might want to bring your own gear, as renting can get a bit pricey. It is possible to 
+          buy some cheap gear in Phuket if you look hard enough.
+
+
         </p>
       </article>
 
