tromso content updated

--- a/phuket.html
+++ b/phuket.html
@@ -42,7 +42,7 @@
   <main>
     <section id = "hero">
       <h1 >Phuket</h1>
-      <img src="./img/los-angeles-sunset-small.jpg" class = "center">
+      <img src="./img/phuket.png" class = "center">
     </section >
       <article id = "scroll">
         <h3>Paradise in Phuket Thailand</h3>
@@ -99,30 +99,30 @@
           <li>Spring</li>
           <li>Summer</li>
           <li>Fall</li>
-          <li> Hi 70 -- Low 50</li>
-          <li> Hi 74 -- Low 58</li>
-          <li> Hi 84 -- Low 66</li>
-          <li> Hi 80 -- Low 60</li>
+          <li> Hi 89 -- Low 73</li>
+          <li> Hi 90 -- Low 75</li>
+          <li> Hi 87 -- Low 74</li>
+          <li> Hi 88 -- Low 73</li>
 
         </ul>
       </section>
       <section id = "events">
         <ul> 
           <h2>Annual Events</h2>
-          <li><a href = "https://theculturetrip.com/north-america/usa/california/articles/la-s-9-best-annual-events/">
-            Culture Trip -- 9 Best</a></li>
-          <li><a href = "https://www.welikela.com/month-by-month-los-angeles-events/">
-            We Like LA Top 10</a></li>
-          <li><a href = "https://www.timeout.com/los-angeles/features/182/festivals-events-in-los-angeles">Festivals</a></li>
-          <li><a href = "https://www.latimes.com/about/events/">LA Times Events Section</a></li>
+          <li><a href = "https://www.phuket101.net/phuket-events-calendar/">
+            Phuket 101 Events</a></li>
+          <li><a href = "https://www.thai2siam.com/phuket/events-and-festival">Festivals</a></li>
+          <li><a href = "travelphuket.com/festivals.html">Travel Phuket</a></li>
+          <li><br></li>
         </ul>
       </section>
       <section id = "links">
         <ul> 
           <h2>Links</h2>
-          <li><a href = "https://www.discoverlosangeles.com">Discover LA</a></li>
-          <li><a href = "https://www.lamag.com">LA Magazine</a></li>
-          <li><a href = "http://luckyboyburgers.com/">Lucky Boy Burgers</a></li>
+          <li><a href = "https://blog.ihg.com/ultimate-guide-visiting-phuket">Visitor's Guide</a></li>
+          <li><a href = "https://www.willflyforfood.net/the-first-timers-travel-guide-to-phuket-thailand/">First Visit Guide</a></li>
+          <li><a href = "https://homeiswhereyourbagis.com/en/23-tips-that-will-make-your-phuket-trip-a-blast/">23 Tips for Visitors</a></li>
+          <li><br></li>
         </ul>
       </section>
     </section>
