--- a/tramso.html
+++ b/tramso.html
@@ -42,25 +42,27 @@
   <main>
     <section id = "hero">
       <h1 >Tromsø</h1>
-      <img src="./img/stowe.jpg" class = "center">
+      <img src="./img/tromso.jpg" class = "center">
     </section >
       <article id = "scroll">
-        <h3>Experience Skiing in The Green Mountains</h3>
-         <p> <br><br>Stowe is a town in Lamoille County, Vermont, United States. The population
-           was 4,314 at the 2010 census. The town lies on Vermont Route 108, locally known as 
-           the Mountain Road. It is nicknamed 'The Ski Capital of the East' and is home to Stowe 
-           Mountain Resort, a ski facility with terrain on Mount Mansfield and Spruce Peak.
+        <h3>Beautiful Norway</h3>
+         <p> <br><br>See the Northern Lights--Tromsø’s northern location makes it perfect for seeing 
+          the Northern Lights, and it is actually one of the places with the highest probability of 
+          experiencing them. Local tour operators offer many types of excursions to give the best possible 
+          chances of seeing this incredible phenomenon depending on conditions and the time of year.
 
-          <br><br>Only Stowe, Vermont combines a classic 200-year-old village with the natural 
-          beauty and serenity of Mt. Mansfield, Vermont's highest peak. This unique juxtaposition 
-          imbues Stowe with a character reminiscent of great European mountain resorts. A true 
-          four-season destination of international renown, Stowe offers endless opportunities to 
-          enjoy the outdoors, from summer activities to world-class skiing, and scores of unique 
-          ways to “Escape the Ordinary.” Visitors searching for great quality and value will find 
-          it in Stowe’s 60+ unique shops, 40+ restaurants, and dozens of different lodging 
-          establishments, ranging from full-service resort spas to quaint bed and breakfasts and 
-          country inns. Virtually all are locally owned, for a refreshing change.
 
+          <br><br>Check out traditional and modern Norway--Tromsø has close links to both modern and 
+          traditional Norway. It has everything from the northernmost gay pride parade in the world to 
+          close links with the local Sami reindeer herders, the original, nomadic peoples of Norway, Sweden, 
+          and Finland. It still thrives off traditional fishing but also has a huge military base. These 
+          odd mixes make Tromsø a very interesting place from which to explore Norwegian culture.
+
+          <br><br>Plenty of native wildlife--The Sami village in Tromsø allows visitors to get up close and 
+          personal with reindeer, a quintessential part of the Arctic landscape. Tromsø also has numerous whale 
+          safaris, as whales, and in particular sperm whales, visit the Norwegian coast every year. The Polar Park 
+          leaves a safe distance between you and some of the more dangerous animals of the Arctic including 
+          wolves, bears, muskoxen, and lynx.
           
         </p>
       </article>
@@ -78,18 +80,18 @@
           <li>Spring</li>
           <li>Summer</li>
           <li>Fall</li>
-          <li> Hi 20 -- Low 4</li>
-          <li> Hi 51 -- Low 25</li>
-          <li> Hi 66 -- Low 47</li>
-          <li> Hi 57 -- Low 20</li>
+          <li> Hi 32 -- Low 22</li>
+          <li> Hi 48 -- Low 25</li>
+          <li> Hi 62 -- Low 44</li>
+          <li> Hi 51 -- Low 28</li>
 
         </ul>
       </section>
       <section id = "events">
         <ul> 
           <h2>Annual Events</h2>
-          <li><a href = "https://gostowe.com/events/">
-            Festivals and Events</a></li>
+          <li><a href = "https://theculturetrip.com/europe/norway/articles/10-reasons-you-should-visit-tromso-before-oslo/">
+            10 Reasons to Visit</a></li>
             <li><br></li>
             <li><br></li>
             <li><br></li>
@@ -98,8 +100,9 @@
       <section id = "links">
         <ul> 
           <h2>Links</h2>
-          <li><a href = "https://gostowe.com/">Info For All Seasons</a></li>
-          <li><a href = "https://www.stowe.com/">Vistor Info</a></li>
+          <li><a href = "https://www.tripadvisor.com/Tourism-g190475-Tromso_Troms_Northern_Norway-Vacations.html
+            ">Trip Advisor--Tromsø</a></li>
+          <li><a href = "https://www.lonelyplanet.com/norway/northern-norway/tromso">Lonely Planet--Tromsø</a></li>
           <li><br></li>
           <li><br></li>
         </ul>
